--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     font-family: sans-serif;
 }
 
-.hero {
+.main-section {
     background-image: url(images/background.png);
     height: 100vh;
     width: 100%;
